--- a/teste.ui
+++ b/teste.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>702</width>
-    <height>313</height>
+    <width>743</width>
+    <height>394</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,10 +19,10 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>12</x>
-     <y>39</y>
-     <width>239</width>
-     <height>29</height>
+     <x>10</x>
+     <y>30</y>
+     <width>251</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -37,14 +37,15 @@
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>261</x>
-     <y>42</y>
+     <x>270</x>
+     <y>30</y>
      <width>101</width>
-     <height>25</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
     <font>
+     <family>Arial</family>
      <pointsize>18</pointsize>
     </font>
    </property>
@@ -56,9 +57,9 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>110</y>
-     <width>217</width>
-     <height>33</height>
+     <y>130</y>
+     <width>221</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="font">
@@ -75,8 +76,8 @@
     <rect>
      <x>10</x>
      <y>181</y>
-     <width>306</width>
-     <height>33</height>
+     <width>311</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="font">
@@ -92,7 +93,7 @@
    <property name="geometry">
     <rect>
      <x>150</x>
-     <y>230</y>
+     <y>290</y>
      <width>80</width>
      <height>32</height>
     </rect>
@@ -104,10 +105,10 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>500</x>
+     <x>540</x>
      <y>40</y>
-     <width>102</width>
-     <height>32</height>
+     <width>121</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="font">
@@ -133,14 +134,15 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>434</x>
-     <y>108</y>
-     <width>256</width>
-     <height>191</height>
+     <x>440</x>
+     <y>110</y>
+     <width>281</width>
+     <height>221</height>
     </rect>
    </property>
    <property name="font">
     <font>
+     <family>Arial</family>
      <pointsize>16</pointsize>
      <kerning>true</kerning>
     </font>
@@ -150,6 +152,62 @@
    </property>
    <property name="backgroundVisible">
     <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>80</y>
+     <width>239</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>24</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Métodos</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="tentativas">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>220</y>
+     <width>131</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial</family>
+     <pointsize>20</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Tentativas</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>360</y>
+     <width>341</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial</family>
+     <pointsize>14</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>© Grupo Cesar, João, Lucas Adolfo, Lucas Ribeiro</string>
    </property>
   </widget>
  </widget>
